Adjust app naming and tab bar by hiding some tabs

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "bolt-expo-starter",
+  "name": "beorwl-app",
   "main": "expo-router/entry",
   "version": "1.0.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "dev": "EXPO_NO_TELEMETRY=1 expo start",
     "build:web": "expo export --platform web",
